--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic-native/core": "^5.32.0",
+    "@ionic-native/device-motion": "^5.32.1",
+    "@ionic-native/flashlight": "^5.32.1",
+    "@ionic-native/native-audio": "^5.32.1",
+    "@ionic-native/splash-screen": "^5.32.1",
+    "@ionic-native/status-bar": "^5.32.1",
     "@ionic-native/vibration": "^5.32.0",
     "@ionic/angular": "^5.5.2",
     "cordova-android": "9.1.0",
+    "cordova-browser": "6.0.0",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -46,9 +52,13 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-flashlight": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-vibration": "^3.1.1",
@@ -85,10 +95,14 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-flashlight": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
